issue 201 rm utilities and search left right spacing

--- a/css/research-guides/research-guide-filter-new.css
+++ b/css/research-guides/research-guide-filter-new.css
@@ -563,7 +563,7 @@ float:none;
 	}
 	.utilities 	{
 		float: right;
-		margin: -45px 10px 0 0;
+		margin: -45px 0 0 0;
 
 
 	}
