--- a/css/sass/_custom_design_patterns.scss
+++ b/css/sass/_custom_design_patterns.scss
@@ -469,7 +469,7 @@ a.button:hover {
 
 a:focus, a:active{
   outline: #1d70b8 solid 5px !important;
-  color: #000 !important;
+  color: #000;
 }
 
 .close  {
