--- a/css/sass/_rebrand.scss
+++ b/css/sass/_rebrand.scss
@@ -7,6 +7,11 @@ hr {
   padding-right: 0;
 }
 
+.no-left-right-margin {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
 .section-heading {
   padding-top: 10px;
   margin-bottom: 26px !important;
